Fixup - SOEOP-366 - adding spacing back to banner.

--- a/css/soe_helper.css
+++ b/css/soe_helper.css
@@ -1595,6 +1595,9 @@ body:not(.page-admin) .sidebar .views-exposed-form .views-exposed-widget .form-s
   .node-type-stanford-news-item .group-s-credits-style.field-group-div.credits {
     display: block; } }
 
+div#block-ds-extras-banner {
+  margin-bottom: -70px; }
+
 #block-ds-extras-banner-overlay {
   max-width: 750px;
   width: 100%;
