--- a/scss/components/_soe_news.scss
+++ b/scss/components/_soe_news.scss
@@ -99,6 +99,10 @@
   }
 }
 
+div#block-ds-extras-banner {
+  margin-bottom: -70px;
+}
+
 #block-ds-extras-banner-overlay {
   max-width: 750px;
   width: 100%;
